--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,16 @@ inputs:
   ecr-repository:
     description: 'ECR Repository URI'
     required: true
+  registry-type:
+    description: 'ECR Registry Type'
+    required: false
+    default: private
+  image-name:
+    description: 'Name of the image'
+    required: true
+  image-tag:
+    description: 'Tag of the image'
+    required: true
 runs:
   using: 'docker'
   image: 'Dockerfile' 
@@ -21,3 +31,6 @@ runs:
     - ${{ inputs.aws-secret-access-key }}
     - ${{ inputs.aws-region }}
     - ${{ inputs.ecr-repository }}
+    - ${{ inputs.registry-type }}
+    - ${{ inputs.image-name }}
+    - ${{ inputs.image-tag }}
