--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,8 @@
 name: 'ECR Login and Push'
 description: 'Login to Amazon ECR and push image'
 inputs:
-  aws-access-key-id:
-    description: 'AWS Access Key ID'
-    required: true
-  aws-secret-access-key:
-    description: 'AWS Secret Access Key'
+  aws-account-id:
+    description: 'AWS Account ID'
     required: true
   aws-region:
     description: 'AWS Region'
@@ -27,8 +24,7 @@ runs:
   using: 'docker'
   image: 'Dockerfile' 
   args:
-    - ${{ inputs.aws-access-key-id }}
-    - ${{ inputs.aws-secret-access-key }}
+    - ${{ inputs.aws-account-id }}
     - ${{ inputs.aws-region }}
     - ${{ inputs.ecr-repository }}
     - ${{ inputs.registry-type }}
