--- a/action.yml
+++ b/action.yml
@@ -24,7 +24,8 @@ runs:
   using: 'docker'
   image: 'Dockerfile' 
   args:
-    - ${{ inputs.aws-account-id }}
+    - ${{ inputs.aws-access-key-id }}
+    - ${{ inputs.aws-secret-access-key }}
     - ${{ inputs.aws-region }}
     - ${{ inputs.ecr-repository }}
     - ${{ inputs.registry-type }}
