--- a/action.yml
+++ b/action.yml
@@ -17,10 +17,11 @@ runs:
 
     - name: Login to Amazon ECR
       run: |
-          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 991108593442.dkr.ecr.$AWS_REGION.amazonaws.com/test/ec2-app /usr/bin/docker
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 991108593442.dkr.ecr.$AWS_REGION.amazonaws.com/test/ec2-app 
       shell: bash
     - name: Build and Push Docker Image
       run: |
+        docker run -d -it --privileged $IMAGE_NAME:$IMAGE_TAG /usr/bin/docker
         docker build -t ${{ inputs.registry }}/${{ inputs.image-name }} .
         docker push ${{ inputs.registry }}/${{ inputs.image-name }}
       shell: bash
