--- a/action.yml
+++ b/action.yml
@@ -2,16 +2,18 @@ name: 'ECR Login and Push'
 description: 'Login to Amazon ECR and push Docker image'
 
 inputs:
-  registry:  
-    description: 'ECR Registry URI'
-    required: true
   repository:  
-    description: 'ECR Repository'
+    description: 'ECR repository URI'
+    required: true
+  registry:  
+    description: 'ECR Registry (public/private)'
     required: true
   image-name:
     description: 'Docker image name'
     required: true
-
+  image-tag:
+    description: 'docker image tag'
+    required: true
 runs:
   using: 'composite'
   steps:
@@ -24,6 +26,6 @@ runs:
       shell: bash
     - name: Build and Push Docker Image
       run: |
-        docker build . -t ${{ inputs.registry }}/${{ inputs.repository }}:${{ inputs.image-name }} 
-        docker push ${{ inputs.registry }}/${{ inputs.repository }}:${{ inputs.image-name }}
+        docker build -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
+        docker push ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
       shell: bash
