--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,6 @@ runs:
       shell: bash
     - name: Build and Push Docker Image
       run: |
-        docker build -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
+        docker build . -t ${{ inputs.image-name }}:${{ inputs.image-tag }} 
         docker push ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
       shell: bash
