--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,10 @@ inputs:
   image-tag:
     description: 'docker image tag'
     required: true
+  dockerfile-path:
+    description: 'Path to the Dockerfile'
+    default: "ecr-login-push/Dockerfile"
+    required: true
 runs:
   using: 'composite'
   steps:
@@ -26,6 +30,6 @@ runs:
       shell: bash
     - name: Build and Push Docker Image
       run: |
-        docker build . -t ${{ inputs.image-name }}:${{ inputs.image-tag }} 
+        docker build -f ${{ inputs.dockerfile-path }} -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
         docker push ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
       shell: bash
