--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,7 @@ inputs:
     required: true
   dockerfile-path:
     description: 'Path to the Dockerfile'
+    default: './'
     required: true
 runs:
   using: 'composite'
