--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,6 @@ runs:
     - name: Build and Push Docker Image
       run: |
         echo "Dockerfile Path: ${{ inputs.dockerfile-path }}"
-        docker build -f ${{ inputs.dockerfile-path }} -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
+        docker build -f Dockerfile -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
         docker push ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
       shell: bash
