--- a/action.yml
+++ b/action.yml
@@ -26,11 +26,12 @@ runs:
 
     - name: Login to Amazon ECR
       run: |
-          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 991108593442.dkr.ecr.$AWS_REGION.amazonaws.com/test/ec2-app 
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ inputs.repository }}/${{ inputs.image-name }}
       shell: bash
     - name: Build and Push Docker Image
       run: |
         echo "Dockerfile Path: ${{ inputs.dockerfile-path }}"
         docker build -f Dockerfile -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
+        docker tag ec2-app:${{ inputs.image-tag }} ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
         docker push ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
       shell: bash
