--- a/action.yml
+++ b/action.yml
@@ -32,6 +32,6 @@ runs:
       run: |
         echo "Dockerfile Path: ${{ inputs.dockerfile-path }}"
         docker build -f Dockerfile -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
-        docker tag ec2-app:${{ inputs.image-tag }} ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
+        docker tag ${{ inputs.image-name }}:${{ inputs.image-tag }} ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
         docker push ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
       shell: bash
