--- a/action.yml
+++ b/action.yml
@@ -30,8 +30,7 @@ runs:
       shell: bash
     - name: Build and Push Docker Image
       run: |
-        echo "Dockerfile Path: ${{ inputs.dockerfile-path }}"
         docker build -f Dockerfile -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
         docker tag ${{ inputs.image-name }}:${{ inputs.image-tag }} ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
-        docker push ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
+        docker push ${{ inputs.repository }}:${{ inputs.image-tag }}
       shell: bash
