--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ runs:
 
     - name: Login to Amazon ECR
       run: |
-          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ inputs.repository }}/${{ inputs.image-name }}
+          aws ecr get-login-password --region us-east-1 --profile maria@skyops-io | docker login --username AWS --password-stdin ${{ inputs.repository }}/${{ inputs.image-name }}
       shell: bash
     - name: Build and Push Docker Image
       run: |
