--- a/action.yml
+++ b/action.yml
@@ -26,12 +26,11 @@ runs:
 
     - name: Login to Amazon ECR
       run: |
-          export AWS_PROFILE=default
-          aws ecr get-login-password --region us-east-1 --profile default | docker login --username AWS --password-stdin ${{ inputs.repository }}/${{ inputs.image-name }}
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ inputs.repository }}/${{ inputs.image-name }}
       shell: bash
     - name: Build and Push Docker Image
       run: |
         docker build -f Dockerfile -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
         docker tag ${{ inputs.image-name }}:${{ inputs.image-tag }} ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
-        docker push ${{ inputs.repository }}/${{ inputs.image-name }}:${{ inputs.image-tag }}
+        docker push ${{ inputs.repository }}/${{ inputs.image-name }}
       shell: bash
