--- a/action.yml
+++ b/action.yml
@@ -25,14 +25,18 @@ runs:
   steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
-    - name: Login to Amazon ECR
+    - name: Run Script
       run: |
-          aws ecr get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repository }}/${{ inputs.image-name }}
+        chmod +x bash.sh
+        ./bash.sh <aws-region> <repository> <image-name> <dockerfile> <image-tag>
       shell: bash
-    - name: Build and Push Docker Image
-      run: |
-        docker build -f ${{ inputs.dockerfile }} -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
-        docker tag ${{ inputs.image-name }}:${{ inputs.image-tag }} ${{ inputs.repository }}:${{ inputs.image-tag }}
-        docker push ${{ inputs.repository }}:${{ inputs.image-tag }}
-      shell: bash
+    # - name: Login to Amazon ECR
+    #   run: |
+    #       aws ecr get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repository }}/${{ inputs.image-name }}
+    #   shell: bash
+    # - name: Build and Push Docker Image
+    #   run: |
+    #     docker build -f ${{ inputs.dockerfile }} -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
+    #     docker tag ${{ inputs.image-name }}:${{ inputs.image-tag }} ${{ inputs.repository }}:${{ inputs.image-tag }}
+    #     docker push ${{ inputs.repository }}:${{ inputs.image-tag }}
+    #   shell: bash
