--- a/action.yml
+++ b/action.yml
@@ -29,8 +29,8 @@ runs:
       run: |
           aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/m4m9z4w0
           docker build -t public .
-          docker tag public:latest public.ecr.aws/m4m9z4w0:latest
-          docker push public.ecr.aws/m4m9z4w0:latest
+          docker tag public:latest public.ecr.aws/m4m9z4w0/public:latest
+          docker push public.ecr.aws/m4m9z4w0/public:latest
       shell: bash
     # - name: Run Script
     #   run: |
