--- a/action.yml
+++ b/action.yml
@@ -27,16 +27,11 @@ runs:
       uses: actions/checkout@v2
     - name: test
       run: |
-          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/m4m9z4w0
+          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/m4m9z4w0/public
           docker build -t public .
           docker tag public:latest public.ecr.aws/m4m9z4w0/public:latest
           docker push public.ecr.aws/m4m9z4w0/public:latest
       shell: bash
-    # - name: Run Script
-    #   run: |
-    #     chmod +x ./bash.sh
-    #     ./bash.sh "${{ inputs.aws-region }}" "${{ inputs.repository }}" "${{ inputs.image-name }}" "${{ inputs.dockerfile }}" "${{ inputs.image-tag }}"
-    #   shell: bash
     # - name: Login to Amazon ECR
     #   run: |
     #       aws ecr get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repository }}/${{ inputs.image-name }}
