--- a/action.yml
+++ b/action.yml
@@ -2,17 +2,17 @@ name: 'ECR Login and Push'
 description: 'Login to Amazon ECR and push Docker image'
 
 inputs:
+  repo-name:
+    description: 'ECR Repository name'
+    required: true
   aws-region:  
     description: 'AWS region'
     required: true
-  repository:  
+  repo-uri:  
     description: 'ECR repository URI'
     required: true
   registry:  
     description: 'ECR Registry (public/private)'
-    required: true
-  image-name:
-    description: 'Docker image name'
     required: true
   image-tag:
     description: 'docker image tag'
@@ -27,18 +27,18 @@ runs:
       uses: actions/checkout@v2
     - name: test
       run: |
-          aws ecr-public get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repository }}
-          docker build -t public .
-          docker tag public:latest public.ecr.aws/m4m9z4w0/public:latest
-          docker push public.ecr.aws/m4m9z4w0/public:latest
+          aws ecr-public get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repo-uri }}
+          docker build -t ${{ inputs.repo-name }} .
+          docker tag ${{ inputs.repo-name }}:${{ inputs.image-tag }} ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
+          docker push ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
       shell: bash
     # - name: Login to Amazon ECR
     #   run: |
-    #       aws ecr get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repository }}/${{ inputs.image-name }}
+    #       aws ecr get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repo-uri }}/${{ inputs.image-name }}
     #   shell: bash
     # - name: Build and Push Docker Image
     #   run: |
     #     docker build -f ${{ inputs.dockerfile }} -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
-    #     docker tag ${{ inputs.image-name }}:${{ inputs.image-tag }} ${{ inputs.repository }}:${{ inputs.image-tag }}
-    #     docker push ${{ inputs.repository }}:${{ inputs.image-tag }}
+    #     docker tag ${{ inputs.repo-name }}:${{ inputs.image-tag }} ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
+    #     docker push ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
     #   shell: bash
