--- a/action.yml
+++ b/action.yml
@@ -11,34 +11,31 @@ inputs:
   repo-uri:  
     description: 'ECR repository URI'
     required: true
-  registry:  
-    description: 'ECR Registry (public/private)'
-    required: true
   image-tag:
     description: 'docker image tag'
     required: true
   dockerfile:
     description: 'Dockerfile'
     required: true
+  registry-type:
+    description: 'Type of registry (public/private)'
+    required: true
+    default: 'private'
+
 runs:
   using: 'composite'
   steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: test
+    - name: ECR Login and Push
       run: |
-          aws ecr-public get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repo-uri }}
-          docker build -t ${{ inputs.repo-name }} .
-          docker tag ${{ inputs.repo-name }}:${{ inputs.image-tag }} ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
-          docker push ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
+        if [ "${{ inputs.registry-type }}" == "public" ]; then
+          aws ecr-public get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{inputs.repo-uri}}
+        else
+          aws ecr get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repo-uri }}
+        fi
+
+        docker build -t ${{ inputs.repo-name }} .
+        docker tag ${{ inputs.repo-name }}:${{ inputs.image-tag }} ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
+        docker push ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
       shell: bash
-    # - name: Login to Amazon ECR
-    #   run: |
-    #       aws ecr get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repo-uri }}/${{ inputs.image-name }}
-    #   shell: bash
-    # - name: Build and Push Docker Image
-    #   run: |
-    #     docker build -f ${{ inputs.dockerfile }} -t ${{ inputs.image-name }}:${{ inputs.image-tag }} .
-    #     docker tag ${{ inputs.repo-name }}:${{ inputs.image-tag }} ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
-    #     docker push ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
-    #   shell: bash
