--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -1,4 +1,5 @@
 name: 'ECS Blue-Green Deployment'
+
 description: 'Deploy and manage ECS services with Blue-Green deployment'
 
 inputs:
@@ -17,29 +18,76 @@ inputs:
   container-name:
     description: 'Name of the container in the task definition'
     required: true
+  ecr-repository:
+    description: 'ECR Repository name'
+    required: true
+  aws-region:  
+    description: 'AWS region'
+    required: true
+  repo-uri:  
+    description: 'ECR repository URI'
+    required: true
+  registry-type:
+    description: 'Type of registry (public/private)'
+    required: true
+    default: 'private'
 
 runs:
   using: 'composite'
   steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Get ECR Login
+      run: |
+        if [ "${{ inputs.registry-type }}" == "public" ]; then
+          aws ecr-public get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{inputs.repo-uri}}
+        else
+          aws ecr get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repo-uri }}
+        fi
+      shell: bash
+    - name: Get Latest ECR Image URI
+      id: ecr
+      run: |
+        IMAGE_URI=$(aws ecr describe-images --repository-name ${{ inputs.ecr-repository }} --query 'images[0].imageUri' --output text)
+        echo "::set-output name=image-uri::$IMAGE_URI"
+      shell: bash
     - name: Deploy Primary Version
       run: |
+        sed -i "s|REPLACE_WITH_IMAGE_URI|${{ steps.ecr.outputs.image-uri }}|" ${{ inputs.task-definition }}
         aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --task-definition ${{ inputs.task-definition }}
       shell: bash
     - name: Wait for Primary Deployment to Stabilize
       run: |
         aws ecs wait services-stable --cluster ${{ inputs.cluster-name }} --services ${{ inputs.service-name }}
       shell: bash
-    - name: Deploy Backup Version
+    - name: Redirect Traffic to Backup Service
       run: |
-        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.backup-service-name }} --task-definition ${{ inputs.task-definition }}
+        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --desired-count 0
+        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.backup-service-name }} --desired-count 1
+      shell: bash
+    - name: Wait for Traffic Redirection to Stabilize
+      run: |
+        aws ecs wait services-stable --cluster ${{ inputs.cluster-name }} --services ${{ inputs.backup-service-name }}
+      shell: bash
+    - name: Cleanup Old Version
+      run: |
+        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --desired-count 0
       shell: bash
     - name: Deploy New Version to the primary service
       run: |
+        sed -i "s|REPLACE_WITH_IMAGE_URI|${{ steps.ecr.outputs.image-uri }}|" ${{ inputs.task-definition }}
         aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --task-definition ${{ inputs.task-definition }}
       shell: bash
     - name: Wait for New Deployment to Stabilize
+      run: |
+        aws ecs wait services-stable --cluster ${{ inputs.cluster-name }} --services ${{ inputs.service-name }}
+      shell: bash
+    - name: Redirect Traffic to Primary Service
+      run: |
+        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --desired-count 1
+        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.backup-service-name }} --desired-count 0
+      shell: bash
+    - name: Wait for Traffic Redirection to Stabilize
       run: |
         aws ecs wait services-stable --cluster ${{ inputs.cluster-name }} --services ${{ inputs.service-name }}
       shell: bash
