--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -31,6 +31,9 @@ inputs:
     description: 'Type of registry (public/private)'
     required: true
     default: 'private'
+  image-tag:
+    description: 'docker image tag'
+    required: true
 
 
 runs:
@@ -45,16 +48,18 @@ runs:
         else
           aws ecr get-login-password --region ${{ inputs.aws-region }} | docker login --username AWS --password-stdin ${{ inputs.repo-uri }}
         fi
+        docker pull ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
       shell: bash
     - name: Get Latest ECR Image URI
       id: ecr
       run: |
         IMAGE_URI=$(aws ecr describe-images --repository-name ${{ inputs.ecr-repository }} --query 'images[0].imageUri' --output text)
-        echo "::set-output name=image-uri::$IMAGE_URI"
+        echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
+
       shell: bash
     - name: Deploy Primary Version
       run: |
-        sed -i "s|REPLACE_WITH_IMAGE_URI|$IMAGE_URI|" ${{ inputs.task-definition }}
+        sed -i "s|REPLACE_WITH_IMAGE_URI|${{ env.IMAGE_URI }}|" ${{ inputs.task-definition }}
         aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --task-definition ${{ inputs.task-definition }}
       shell: bash
     - name: Wait for Primary Deployment to Stabilize
@@ -76,7 +81,7 @@ runs:
       shell: bash
     - name: Deploy New Version to the primary service
       run: |
-        sed -i "s|REPLACE_WITH_IMAGE_URI|${{ steps.ecr.outputs.image-uri }}|" ${{ inputs.task-definition }}
+        sed -i "s|REPLACE_WITH_IMAGE_URI|${{ env.IMAGE_URI }}|" ${{ inputs.task-definition }}
         aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --task-definition ${{ inputs.task-definition }}
       shell: bash
     - name: Wait for New Deployment to Stabilize
