--- a/action.yml
+++ b/action.yml
@@ -1,19 +1,38 @@
-- name: Login to ECR
-  run: |
-    echo ${{ secrets.AWS_ACCESS_KEY_ID }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
-    docker pull ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/test:latest
+name: ECR Image Pull and Task Definition Update
 
-- name: Get Latest ECR Image URI
-  id: ecr
-  run: |
-    REPOSITORY_NAME="test"
-    IMAGE_URI=$(aws ecr describe-images --repository-name $REPOSITORY_NAME --query 'images[0].imageUri' --output text)
-    echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
+on:
+  push:
+    branches:
+      - main  # Adjust the branch as needed
 
-- name: Update Task Definition
-  run: |
-    sed -i "s|REPLACE_WITH_IMAGE_URI|${{ env.IMAGE_URI }}|" service
-    aws ecs update-service --cluster maria-dev-cluster --service maria-dev-service --task-definition service
+jobs:
+  update-task-definition:
+    runs-on: ubuntu-latest
 
-- name: Wait for Deployment to Stabilize
-  run: aws ecs wait services-stable --cluster maria-dev-cluster --services maria-dev-service
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Configure AWS credentials
+      run: aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} && aws configure set region ${{ secrets.AWS_REGION }}
+
+    - name: Login to Amazon ECR
+      run: |
+        aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY_URL }}
+
+    - name: Pull image from ECR
+      run: docker pull ${{ secrets.ECR_REGISTRY_URL }}:${{ github.sha }}
+
+    - name: Extract ECR Image URI
+      id: ecr
+      run: |
+        IMAGE_URI=$(docker inspect --format='{{index .RepoDigests 0}}' ${{ secrets.ECR_REGISTRY_URL }}:${{ github.sha }})
+        echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
+
+    - name: Update ECS Task Definition
+      run: |
+        sed -i "s|REPLACE_WITH_IMAGE_URI|${{ needs.ecr.outputs.IMAGE_URI }}|" path/to/task-definition.json
+        # Additional steps to update ECS task definition with the new image URI
+
+    - name: Debug IMAGE_URI
+      run: echo "IMAGE_URI: ${{ needs.ecr.outputs.IMAGE_URI }}"
