--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -50,6 +50,7 @@ runs:
         fi
         docker pull ${{ inputs.repo-uri }}:${{ inputs.image-tag }}
       shell: bash
+
     - name: Get Latest ECR Image URI
       id: ecr
       run: |
@@ -58,46 +59,69 @@ runs:
         echo "Retrieved Image URI: $IMAGE_URI"
 
       shell: bash
+
+    - name: Update Task Definition Image
+      id: update-task-def
+      run: |
+        NEW_TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "${{ inputs.task-definition }}" --region "${{ inputs.aws-region }}")
+        NEW_TASK_DEFINITION=$(echo "$NEW_TASK_DEFINITION" | jq --arg IMAGE "$IMAGE_URI" '.taskDefinition | .containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities)')
+        echo "::set-output name=new-task-definition::$NEW_TASK_DEFINITION"
+      shell: bash
+      env:
+        IMAGE_URI: ${{ env.IMAGE_URI }}
+
+    - name: Register Updated Task Definition
+      run: |
+        aws ecs register-task-definition --region "${{ inputs.aws-region }}" --cli-input-json "$NEW_TASK_DEFINITION"
+      shell: bash
+
     - name: Deploy Primary Version
       run: |
-        sed -i "s|REPLACE_WITH_IMAGE_URI|${{ env.IMAGE_URI }}|" "${{ inputs.task-definition }}"
-        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --task-definition ${{ inputs.task-definition }}
+        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --task-definition "${{ inputs.task-definition }}:latest"
       shell: bash
+
     - name: Wait for Primary Deployment to Stabilize
       run: |
         aws ecs wait services-stable --cluster ${{ inputs.cluster-name }} --services ${{ inputs.service-name }}
       shell: bash
+
     - name: Redirect Traffic to Backup Service
       run: |
         aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --desired-count 0
         aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.backup-service-name }} --desired-count 1
       shell: bash
+
     - name: Wait for Traffic Redirection to Stabilize
       run: |
         aws ecs wait services-stable --cluster ${{ inputs.cluster-name }} --services ${{ inputs.backup-service-name }}
       shell: bash
+
     - name: Cleanup Old Version
       run: |
         aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --desired-count 0
       shell: bash
+
     - name: Deploy New Version to the primary service
       run: |
-        sed -i "s|REPLACE_WITH_IMAGE_URI|${{ env.IMAGE_URI }}|" ${{ inputs.task-definition }}
-        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --task-definition ${{ inputs.task-definition }}
+        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --task-definition "${{ inputs.task-definition }}:latest"
       shell: bash
+
     - name: Wait for New Deployment to Stabilize
       run: |
         aws ecs wait services-stable --cluster ${{ inputs.cluster-name }} --services ${{ inputs.service-name }}
       shell: bash
+
     - name: Redirect Traffic to Primary Service
       run: |
         aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --desired-count 1
         aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.backup-service-name }} --desired-count 0
       shell: bash
+
     - name: Wait for Traffic Redirection to Stabilize
       run: |
         aws ecs wait services-stable --cluster ${{ inputs.cluster-name }} --services ${{ inputs.service-name }}
       shell: bash
+
     - name: Cleanup Old Version
       run: |
         aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.backup-service-name }} --desired-count 0
