--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -64,6 +64,7 @@ runs:
       id: update-task-def
       run: |
         NEW_TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "${{ inputs.task-definition }}" --region "${{ inputs.aws-region }}")
+        echo "NEW_TASK_DEFINITION=${NEW_TASK_DEFINITION}" >> $GITHUB_ENV
         NEW_TASK_DEFINITION=$(echo "$NEW_TASK_DEFINITION" | jq --arg IMAGE "$IMAGE_URI" '.taskDefinition | .containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities)')
         echo "::set-output name=new-task-definition::$NEW_TASK_DEFINITION"
       shell: bash
