--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -65,6 +65,8 @@ runs:
       run: |
         TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "${{ inputs.task-definition }}" --region "${{ inputs.aws-region }}")
         NEW_TASK_DEFINITION=$(echo "$NEW_TASK_DEFINITION" | jq --arg IMAGE "$IMAGE_URI" '.taskDefinition | .containerDefinitions[0].image = "$IMAGE_URI" | del(.taskDefinitionArn) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities)')
+        env:
+        IMAGE_URI: ${{ env.IMAGE_URI }}
       shell: bash
 
     - name: Register Updated Task Definition
