--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -54,7 +54,7 @@ runs:
     - name: Get Latest ECR Image URI
       id: ecr
       run: |
-        IMAGE_URI=$(docker inspect --format='{{index .RepoDigests 0}}' ${{ inputs.repo-uri }}:${{ inputs.image-tag }})
+        IMAGE_URI=$(docker inspect ${{ inputs.repo-uri }}:${{ inputs.image-tag }})
         echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
         echo "Retrieved Image URI: $IMAGE_URI"
       env:
