--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -54,12 +54,9 @@ runs:
     - name: Get Latest ECR Image URI
       id: ecr
       run: |
-        IMAGE_URI=$(docker inspect ${{ inputs.repo-uri }}:${{ inputs.image-tag }})
+        IMAGE_URI=$(docker inspect --format='{{index .RepoDigests 0}}' ${{ inputs.repo-uri }}:${{ inputs.image-tag }})
         echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
         echo "Retrieved Image URI: $IMAGE_URI"
-      env:
-        IMAGE_URI: ${{ env.IMAGE_URI }}
-
       shell: bash
 
     - name: Update Task Definition Image
@@ -67,6 +64,8 @@ runs:
       run: |
         TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "${{ inputs.task-definition }}" --region "${{ inputs.aws-region }}")
         NEW_TASK_DEFINITION=$(echo "$NEW_TASK_DEFINITION" | jq --arg IMAGE "$IMAGE_URI" '.taskDefinition | .containerDefinitions[0].image = "$IMAGE_URI" | del(.taskDefinitionArn) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities)')
+      env:
+        IMAGE_URI: ${{ env.IMAGE_URI }}
       shell: bash
 
     - name: Register Updated Task Definition
