--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -71,7 +71,7 @@ runs:
 
     - name: Register Updated Task Definition
       run: |
-        aws ecs register-task-definition --region "us-east-1" --cli-input-json file://updated-task-definition.json "$NEW_TASK_DEFINTIION"     
+        aws ecs register-task-definition --region "${{ inputs.aws-region }}" --cli-input-json "file://updated-task-definition.json"
       shell: bash
 
     - name: Deploy Primary Version
