--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -57,8 +57,8 @@ runs:
       run: |
         OLD_TASK_DEF=$(aws ecs describe-task-definition --task-definition "${{ inputs.task-definition }}")
         NEW_CONTAINER_DEFS=$(echo $OLD_TASK_DEF | jq '.taskDefinition.containerDefinitions' | jq '.[0].image="$NEW_ECR_IMAGE"')
-        echo "show task-def.json"
-        cat task-def.json
+  #echo "show task-def.json"
+  #      cat task-def.json
       shell: bash
 
     - name: Register Task Definition 
