--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -57,13 +57,14 @@ runs:
       run: |
         OLD_TASK_DEF=$(aws ecs describe-task-definition --task-definition "${{ inputs.task-definition }}")
         NEW_CONTAINER_DEFS=$(echo $OLD_TASK_DEF | jq '.taskDefinition.containerDefinitions' | jq '.[0].image="$NEW_ECR_IMAGE"')
-  #echo "show task-def.json"
-  #      cat task-def.json
+        >/tmp/tmp.json
+        echo "show task-def.json"
+        cat /tmp/tmp.json
       shell: bash
 
     - name: Register Task Definition 
       run: |
-        aws ecs register-task-definition --family "service" --container-definitions "'$(echo $NEW_CONTAINER_DEFS)'"
+        aws ecs register-task-definition --family "service" --cli-input-json 'file://tmp.json'
       shell: bash
 
     - name: Deploy Primary Version
