--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -56,9 +56,13 @@ runs:
     - name: Update Task Definition Image
       run: |
         TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "service:158" --region "us-east-1")
-        echo $TASK_DEFINITION | jq '.containerDefinitions[0].image='${NEW_ECR_IMAGE}'' > task-def.json
-        echo "show task-def.json"
+        NEW_ECR_IMAGE="${{ inputs.repo-uri }}:${{ inputs.image-tag }}"
+        echo $TASK_DEFINITION | jq --arg new_image "$NEW_ECR_IMAGE" '.taskDefinition.containerDefinitions[0].image = $new_image' > task-def.json
+        echo "Updated task-def.json"
         cat task-def.json
+      # echo $TASK_DEFINITION | jq '.containerDefinitions[0].image="'${NEW_ECR_IMAGE}'"' > task-def.json
+      # echo "show task-def.json"
+      # cat task-def.json
       shell: bash
 
     - name: Register Task Definition 
